--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -10,7 +10,7 @@
       "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/client",
+        "outputPath": "dist/apps/client/browser",
         "index": "apps/client/src/index.html",
         "main": "apps/client/src/main.ts",
         "polyfills": ["zone.js"],
@@ -90,6 +90,59 @@
       "options": {
         "buildTarget": "client:build"
       }
+    },
+    "server": {
+      "dependsOn": ["build"],
+      "executor": "@angular-devkit/build-angular:server",
+      "options": {
+        "outputPath": "dist/apps/client/server",
+        "main": "apps/client/server.ts",
+        "tsConfig": "apps/client/tsconfig.server.json"
+      },
+      "configurations": {
+        "production": {
+          "outputHashing": "media"
+        },
+        "development": {
+          "buildOptimizer": false,
+          "optimization": false,
+          "sourceMap": true,
+          "extractLicenses": false,
+          "vendorChunk": true
+        }
+      },
+      "defaultConfiguration": "production"
+    },
+    "serve-ssr": {
+      "executor": "@nguniversal/builders:ssr-dev-server",
+      "configurations": {
+        "development": {
+          "browserTarget": "client:build:development",
+          "serverTarget": "client:server:development"
+        },
+        "production": {
+          "browserTarget": "client:build:production",
+          "serverTarget": "client:server:production"
+        }
+      },
+      "defaultConfiguration": "development"
+    },
+    "prerender": {
+      "executor": "@nguniversal/builders:prerender",
+      "options": {
+        "routes": ["/"]
+      },
+      "configurations": {
+        "development": {
+          "browserTarget": "client:build:development",
+          "serverTarget": "client:server:development"
+        },
+        "production": {
+          "browserTarget": "client:build:production",
+          "serverTarget": "client:server:production"
+        }
+      },
+      "defaultConfiguration": "production"
     }
   }
 }
