add gql subscription example

--- a/package.json
+++ b/package.json
@@ -14,24 +14,33 @@
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/platform-server": "~16.0.0",
     "@angular/router": "~16.0.0",
-    "@apollo/client": "^3.7.14",
+    "@apollo/client": "3.6.0",
+    "@apollo/explorer": "^2.0.2",
+    "@apollo/sandbox": "^1.0.3",
+    "@nestjs/apollo": "^10.1.7",
     "@nestjs/common": "^9.1.1",
     "@nestjs/core": "^9.1.1",
+    "@nestjs/graphql": "^10.1.7",
     "@nestjs/platform-express": "^9.1.1",
     "@nestjs/platform-socket.io": "^9.4.0",
     "@nestjs/websockets": "^9.4.0",
     "@nguniversal/express-engine": "~16.0.0",
     "@nx/angular": "16.1.4",
     "@nx/nest": "^16.1.4",
-    "apollo-angular": "^5.0.0",
+    "apollo-angular": "^4.1.1",
+    "apollo-server-express": "^3.11.1",
     "axios": "^1.0.0",
     "graphql": "^16.6.0",
-    "graphql-ws": "^5.13.0",
+    "graphql-redis-subscriptions": "^2.6.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-tools": "^8.3.14",
+    "graphql-ws": "^5.11.2",
     "ngx-stripe": "^16.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
+    "subscriptions-transport-ws": "^0.11.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
